# src/schemas/user.schema.ts
@@ -99,6 +99,8 @@ export const paginationQuerySchema = z.object({
   query: z.object({
     page: z.string().transform(val => parseInt(val, 10)).refine(val => val > 0, 'Page must be greater than 0').optional().default(1),
     limit: z.string().transform(val => parseInt(val, 10)).refine(val => val > 0 && val <= 100, 'Limit must be between 1 and 100').optional().default(10),
+    email: z.string().optional(),
+    isActive: z.string().transform(val => val.toLowerCase() === 'true').optional(),
   }),
 });
 
